Final 09_request s3 test clean up

--- a/t/09_requests/s3-abort-multi-part.request.test.yml
+++ b/t/09_requests/s3-abort-multi-part.request.test.yml
@@ -21,15 +21,15 @@ tests:
   - expected: DELETE
     op: eq
     path: method
-  - expected: https://s3.amazonaws.com/oneoffpaws/Some%20Key?
-    ep: ew
+  - expected: https://s3.fake_region.amazonaws.com/oneoffpaws/Some%20Key?
+    ep: eq
     path: url
   - expected: uploadId=AN+Id
-    ep: ew
+    ep: eq
     path: url
-  - expected: /dev.cargotel.paws/Some%20Key
-    ep: ew
+  - expected: /oneoffpaws/Some%20Key
+    ep: eq
     path: uri
-  - expected:  uploadId=AN+Id
-    ep: ew
+  - expected: uploadId=AN+Id
+    ep: eq
     path: uri
