--- a/t/09_requests/s3-get-bucket-public-access-block.request.test.yml
+++ b/t/09_requests/s3-get-bucket-public-access-block.request.test.yml
@@ -2,7 +2,8 @@
 call: GetPublicAccessBlock 
 service: S3
 tests:
-  - op: eq
+  - expected: '' 
+    op: eq
     path: content
   - expected: oneoffpaws 
     op: eq
