--- a/t/09_requests/s3-put-bucket-policy.request.test.yml
+++ b/t/09_requests/s3-put-bucket-policy.request.test.yml
@@ -2,7 +2,7 @@
 call: PutBucketPolicy 
 service: S3
 tests:
-  - expected: '{"Id": "Policy1572795613217","Version": "2012-10-17","Statement": [{"Sid": "Stmt1234567890","Action": ["*"],"Effect": "Allow","Resource": "arn:aws:s3:::oneoffpaws", "Principal": { "AWS": ["arn:aws:iam::1234567890:user/ghehoiso"]}}]}'
+  - expected: '' 
     op: eq
     path: content
   - expected: oneoffpaws 
