--- a/t/09_requests/s3-put-bucket-request-payment.request.test.yml
+++ b/t/09_requests/s3-put-bucket-request-payment.request.test.yml
@@ -12,7 +12,7 @@ tests:
   - expected: Requester
     op: eq
     path: parameters
-    key: Payer
+    key: RequestPaymentConfiguration.Payer 
   - expected: PUT
     op: eq
     path: method
