--- a/t/09_requests/s3-complete-multi-part.request.test.yml
+++ b/t/09_requests/s3-complete-multi-part.request.test.yml
@@ -9,31 +9,27 @@ tests:
     op: eq
     path: parameters
     key: Bucket
-  - expected: 
-    op: eq
-    path: parameters
-    key: 
- - expected: requester
+  - expected: requester
     op: eq
     path: parameters
     key: RequestPayer
- - expected: 3
+  - expected: 3
     op: eq
     path: parameters
     key: MultipartUpload.Parts.Part.2.PartNumber
- - expected: Some Key
+  - expected: Some Key
     op: eq
     path: parameters
     key: Key
- - expected: MyETag
+  - expected: MyETag
     op: eq
     path: parameters
     key: MultipartUpload.Parts.Part.1.ETag
- - expected: AN Id
+  - expected: AN Id
     op: eq
     path: parameters
     key: uploadId
- - expected: 1
+  - expected: 1
     op: eq
     path: parameters
     key: MultipartUpload.Parts.Part.1.PartNumber
@@ -44,24 +40,12 @@ tests:
   - expected: POST 
     op: eq
     path: method
-  - expected: https://s3.amazonaws.com/oneoffpaws/Some%20Key?
-    ep: ew
+  - expected: https://s3.fake_region.amazonaws.com/oneoffpaws/Some%20Key?
+    p: eq
     path: url
-  - expected: uploadId=MyMultipartUploadId
-    ep: ew
+  - expected: uploadId=AN+Id
+    ep: eq
     path: url
-   - expected: uploadId=MyMultipartUploadId
-    ep: ew
-    path: url
-  - expected: uploadId=MyMultipartUploadId
-    ep: ew
-    path: url
-  - expected: max-parts=1
-    ep: ew
-    path: uri
-  - expected: uploadId=MyMultipartUploadId
-    ep: ew
-    path: uri
-  - expected: part-number-marker=1
-    ep: ew
+  - expected: uploadId=AN+Id
+    ep: eq
     path: uri
