--- a/t/09_requests/s3-delete-bucket-bucket-analytics-configurations.request.test.yml
+++ b/t/09_requests/s3-delete-bucket-bucket-analytics-configurations.request.test.yml
@@ -2,7 +2,7 @@
 call: DeleteBucketAnalyticsConfiguration 
 service: S3
 tests:
-  - expected:
+  - expected: ''
     op: eq
     path: content
   - expected: oneoffpaws 
