--- a/t/09_requests/s3-delete-bucket-inventory-configuration.request.test.yml
+++ b/t/09_requests/s3-delete-bucket-inventory-configuration.request.test.yml
@@ -6,15 +6,28 @@ tests:
     op: eq
     path: parameters
     key: Bucket
+  - expected: tyehshsyye
+    op: eq
+    path: parameters
+    key: id
   - expected: DELETE 
     op: eq
     path: method
   - expected: https://s3.fake_region.amazonaws.com/oneoffpaws?
     path: url
+    op: eq
   - expected: inventory
     path: url
+    op: eq
   - expected: /oneoffpaws
     path: uri
+    op: eq
   - expected: inventory
     path: url
-
+    op: eq
+  - expected: id=tyehshsyye
+    path: url
+    op: eq
+  - expected: id=tyehshsyye
+    path: url
+    op: eq
