--- a/t/09_requests/s3-delete-object-tagging.request.test.yml
+++ b/t/09_requests/s3-delete-object-tagging.request.test.yml
@@ -13,9 +13,9 @@ tests:
   - expected: DELETE
     op: eq
     path: method
-  - expected: /dev.cargotel.paws/lhf/insp/attachments/assigned/condition_1_1033233_275731_69069.jpg? 
+  - expected: /oneoffpaws/lhf/insp/attachments/assigned/condition_1_1033233_275731_69069.jpg? 
     path: uri
-  - expected: https://s3.fake_region.amazonaws.com/dev.cargotel.paws/lhf/insp/attachments/assigned/condition_1_1033233_275731_69069.jpg?
+  - expected: https://s3.fake_region.amazonaws.com/oneoffpaws/lhf/insp/attachments/assigned/condition_1_1033233_275731_69069.jpg?
     path: url
   - expected: tagging
     path: uri
