--- a/t/09_requests/s3-get-bucket-acl.request.test.yml
+++ b/t/09_requests/s3-get-bucket-acl.request.test.yml
@@ -2,7 +2,7 @@
 call: GetBucketAcl 
 service: S3
 tests:
-  - expected: 
+  - expected: '' 
     op: eq
     path: content
   - expected: oneoffpaws 
