--- a/t/09_requests/s3-put-bucket-tagging.request.test.yml
+++ b/t/09_requests/s3-put-bucket-tagging.request.test.yml
@@ -2,33 +2,33 @@
 call: PutBucketTagging 
 service: S3
 tests:
-  - expected: <Tagging xmlns="http://s3.amazonaws.com/doc/2006-03-01/"><TagSet><Tag><Key>AKey</Key><Value>a value</Value></Tag><Tag><Key>bKey</Key><Value>b value</Value></Tag></TagSet></Tagging>
+  - expected: <Tagging xmlns="http://s3.amazonaws.com/doc/2006-03-01/"><TagSet><Tag><Key>Akey</Key><Value>a value</Value></Tag><Tag><Key>bkey</Key><Value>b value</Value></Tag></TagSet></Tagging>
     op: eq
     path: content
   - expected: oneoffpaws 
     op: eq
     path: parameters
-    Key: Bucket
+    key: Bucket
   - expected: a value
     op: eq
     path: parameters
-    Key: Tagging.TagSet.Tag.1.Value
-  - expected: AKey
+    key: Tagging.TagSet.Tag.1.Value
+  - expected: Akey
     op: eq
     path: parameters
-    Key: Tagging.TagSet.Tag.1.Key
+    key: Tagging.TagSet.Tag.1.Key
   - expected: b value
     op: eq
     path: parameters
-    Key: Tagging.TagSet.Tag.2.Value
-  - expected: bKey
+    key: Tagging.TagSet.Tag.2.Value
+  - expected: bkey
     op: eq
     path: parameters
-    Key: Tagging.TagSet.Tag.2.Key
+    key: Tagging.TagSet.Tag.2.Key
   - expected: PUT
     op: eq
     path: method
-  - expected: https://s3.amazonaws.com/dev.cargotel.paws?
+  - expected: https://s3.fake_region.amazonaws.com/oneoffpaws?
     path: url
   - expected: tagging
     path: url
