--- a/t/09_requests/s3-put-object-legal-hold.request.test.yml
+++ b/t/09_requests/s3-put-object-legal-hold.request.test.yml
@@ -4,8 +4,7 @@ service: S3
 tests:
   - expected: <LegalHold xmlns="http://s3.amazonaws.com/doc/2006-03-01/"><Status>ON</Status></LegalHold>
     op: eq
-    path: parameters
-    key:  
+    path: content
   - expected: oneoffpaws 
     op: eq
     path: parameters
