--- a/t/09_requests/s3-put-pubic-notification-configuration.request.test.yml
+++ b/t/09_requests/s3-put-pubic-notification-configuration.request.test.yml
@@ -2,7 +2,7 @@
 call: PutBucketNotificationConfiguration 
 service: S3
 tests:
-  - expected: <NotificationConfiguration xmlns="http://s3.amazonaws.com/doc/2006-03-01/"><TopicConfiguration><Event>s3:ReducedRedundancyLostObject</Event><Id>My config</Id><Topic>arn:aws:sns:us-east-1:356671443308:s3notificationtopic2</Topic></TopicConfiguration></NotificationConfiguration>
+  - expected: <NotificationConfiguration xmlns="http://s3.amazonaws.com/doc/2006-03-01/"><TopicConfiguration><Event>s3\:ReducedRedundancyLostObject</Event><Id>My config</Id><Topic>arn:aws:sns:us-east-1:356671443308:s3notificationtopic2</Topic></TopicConfiguration></NotificationConfiguration>
     op: eq
     path: content
   - expected: oneoffpaws 
@@ -13,11 +13,11 @@ tests:
     op: eq
     path: parameters
     key: NotificationConfiguration.TopicConfigurations.TopicConfiguration.1.Id
-  - expected: s3:ReducedRedundancyLostObject
+  - expected: s3\:ReducedRedundancyLostObject
     op: eq
     path: parameters
     key: NotificationConfiguration.TopicConfigurations.TopicConfiguration.1.Events.1
-  - expected: arn:aws:sns:us-east-1:356671443308:s3notificationtopic2<Paste>
+  - expected: arn:aws:sns:us-east-1:356671443308:s3notificationtopic2
     op: eq
     path: parameters
     key: NotificationConfiguration.TopicConfigurations.TopicConfiguration.1.TopicArn
@@ -26,9 +26,13 @@ tests:
     path: method
   - expected: https://s3.fake_region.amazonaws.com/oneoffpaws?
     path: url
-  - expected: Notification
+    op: eq
+  - expected: notification
     path: url
-  - expected: Notification
-    path: uri   
+    op: eq
+  - expected: notification
+    path: uri
+    op: eq
   - expected: /oneoffpaws?
     path: uri
+    op: eq
