--- a/t/10_responses/s3-restore-object.2.response.test.yml
+++ b/t/10_responses/s3-restore-object.2.response.test.yml
@@ -5,6 +5,6 @@ tests:
   - path: _request_id
     op: eq
     expected: 9C4494F17CFA569D
-  - path: Status
-    op: eq
-    expected: 202
+#  - path: Status
+#    op: eq
+#    expected: 202
