--- a/t/09_requests/s3-get-bucket-bucket-analytics-configurations.request.test.yml
+++ b/t/09_requests/s3-get-bucket-bucket-analytics-configurations.request.test.yml
@@ -12,19 +12,19 @@ tests:
   - expected: test1333
     op: eq
     path: parameters
-    key: Id
+    key: id
   - expected: GET 
     op: eq
     path: method
   - expected: https://s3.fake_region.amazonaws.com/oneoffpaws?
     path: url
-  - expected: Id=test1333
+  - expected: id=test1333
     path: url
   - expected: analytics=
     path: url
   - expected: /oneoffpaws?
     path: uri
-  - expected: Id=test1333
+  - expected: id=test1333
     path: uri
   - expected: analytics=
     path: uri
