Final check in all tests passing

--- a/t/09_requests/cloudfront-listcloudfrontoriginaccessidentities.1.request.test.yml
+++ b/t/09_requests/cloudfront-listcloudfrontoriginaccessidentities.1.request.test.yml
@@ -37,6 +37,10 @@ tests:
   - expected: /2019-03-26/origin-access-identity/cloudfront
     op: eq
     path: uri
-  - expected: MaxItems=10&Marker=
+  - expected: MaxItems=10
     op: eq
     path: uri
+  - expected: Marker=
+    op: eq
+    path: uri
+
