--- a/t/09_requests/cloudfront-listfieldlevelencryptionconfigs.1.request.test.yml
+++ b/t/09_requests/cloudfront-listfieldlevelencryptionconfigs.1.request.test.yml
@@ -37,6 +37,9 @@ tests:
   - expected: /2019-03-26/field-level-encryption
     op: eq
     path: uri
-  - expected: Marker=C26GE31LXDSQZI&MaxItems=4
+  - expected: MaxItems=4
+    op: eq
+    path: uri
+  - expected: Marker=C26GE31LXDSQZI
     op: eq
     path: uri
