--- a/t/09_requests/cloudfront-untagresource.request.test.yml
+++ b/t/09_requests/cloudfront-untagresource.request.test.yml
@@ -41,6 +41,9 @@ tests:
   - expected: /2019-03-26/tagging
     op: eq
     path: uri
-  - expected: Operation=Untag&Resource=arn%3Aaws%3Acloudfront%3A%3A985173205561%3Adistribution%2FE2F696NMEQJ5SH
+  - expected: Operation=Untag
+    op: eq
+    path: uri
+  - expected: Resource=arn%3Aaws%3Acloudfront%3A%3A985173205561%3Adistribution%2FE2F696NMEQJ5SH
     op: eq
     path: uri
