Configure travis build to suppres informative messages when Perl module is building
This fix sets quiet module in .modulebuildrc file. This should prevent job termination due maximum log length

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,5 @@ matrix:
     - perl: 5.8
 sudo: false
 before_install:
+  - echo "* quiet=1" > ~/.modulebuildrc
   - eval $(curl https://travis-perl.github.io/init) --auto
