--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,4 @@ sudo: false
 before_install:
   - echo "* quiet=1" > ~/.modulebuildrc
   - eval $(curl https://travis-perl.github.io/init) --auto
+  - env
