--- a/.travis.yml
+++ b/.travis.yml
@@ -18,17 +18,18 @@ matrix:
     - perl: dev
     - perl: 5.8
 sudo: false
-before_install:
-  - eval $(curl https://travis-perl.github.io/init) --auto
-
 # before_install:
-#   - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
-#   - source ~/travis-perl-helpers/init
-#   - build-perl
-#   - perl -V
-#   - build-dist
-#   - cd $BUILD_DIR             # $BUILD_DIR is set by the build-dist command
-# install:
-#   - cpan-install --deps       # installs prereqs, including recommends
-# script:
-#   - prove -l -j$(test-jobs) $(test-files)   # parallel testing
+#   - eval $(curl https://travis-perl.github.io/init) --auto
+
+before_install:
+  - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
+  - source ~/travis-perl-helpers/init
+  - build-perl
+  - perl -V
+  - build-dist
+  - cd $BUILD_DIR             # $BUILD_DIR is set by the build-dist command
+install:
+  - cpan-install --deps       # installs prereqs, including recommends
+  - cpan-install --coverage   # installs coverage prereqs, if enabled
+script:
+  - prove -l -j$(test-jobs) $(test-files)   # parallel testing
