Configure travis build to suppres informative messages when Perl module is building
This should prevent job termination due maximum log length

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,3 +33,5 @@ install:
   - cpan-install --coverage   # installs coverage prereqs, if enabled
 script:
   - prove -l -j$(test-jobs) $(test-files)   # parallel testing
+before_script:
+  - coverage-setup
