--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,7 @@ jobs:
         os:
           - ubuntu-latest
         perl:
+          - "5.36"
           - "5.34"
           - "5.32"
           - "5.30"
@@ -29,11 +30,11 @@ jobs:
         # because concurrency of builds on macos-latest is limit and it takes long time.
         include:
           - os: macos-latest
-            perl: "5.34"
+            perl: "5.36"
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Perl ${{ matrix.perl }}
         uses: shogo82148/actions-setup-perl@v1
@@ -58,4 +59,5 @@ jobs:
       - name: Test
         run: prove -l -j2 t
         env:
-          AUTHOR_TESTING: "1"
+          AUTHOR_TESTING: 1
+          PAWS_SILENCE_UNSTABLE_WARNINGS: 1
